# soul_chat

./: .env.example  .gitignore  CLAUDE.md  app.py  pyproject.toml  start.ps1  test-api.ps1  test_ws.py  test_ws_simple.py
backend/: main.py
core/: __init__.py  llm.py  pipeline.py  stt.py  tts.py
frontend/: index.html  main.js  package.json  style.css  vite.config.js
memory/: __init__.py  window_memory.py
prompts/: system_prompt.txt
tests/: test_llm.py  test_pipeline.py  test_stt.py  test_tts.py
