[project]
name = "soul-chat"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "edge-tts>=6.1.0",
    "gradio>=4.0.0",
    "python-dotenv>=1.0.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "faster-whisper>=1.0.0",
    "aiohttp>=3.9.0",
]

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "memory"]
